--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "mulunguApp",
+  "moduleName": "ArrebolApp",
   "overrides": {
     "bootstrap": {
       "main": [
