--- a/app/scripts/tasks.json
+++ b/app/scripts/tasks.json
@@ -1,282 +1,22 @@
 {
-  "name": "É por sua conta e risco",
-  "readytasks": 2,
-  "id":"4a98e288-e416-45c9-8f92-aed081fff49a",
-  "tasks": [
-      {
-        "id": "TaskNumber0",
-        "text": "Friendly task name",
-        "taskState": "READY"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "RUNNING"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "COMPLETED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "READY"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "READY"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "READY"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "RUNNING"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      },
-      {
-        "id": "TaskNumber1",
-        "text": "Another task with friendly name",
-        "taskState": "FAILED"
-      }
+  "id": "a723eedb-3255-4b92-b09d-33ea1ed5fd81",
+  "name": "primes",
+  "Tasks": [
+    {
+      "taskid": "TaskNumber2",
+      "state": "READY"
+    },
+    {
+      "taskid": "26c1830a-8005-4ba6-989c-2e4220331591_clonedFrom_TaskNumber1",
+      "state": "READY"
+    },
+    {
+      "taskid": "TaskNumber0",
+      "state": "READY"
+    },
+    {
+      "taskid": "TaskNumber1",
+      "state": "FAILED"
+    }
   ]
 }
