--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-md5": "^0.1.10",
+    "jsrsasign": "^5.0.12"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
