--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-md5": "^0.1.10",
-    "jsrsasign": "^5.0.12"
+    "jsrsasign": "^5.0.12",
+    "angular-toastr": "1.7.x"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
